--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
     "casbin.js": "^1.0.1",
+    "export-to-csv": "^0.2.1",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.1",
     "i18next-xhr-backend": "^3.2.2",
