--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pankod/refine": "^2.0.7",
-    "@pankod/refine-react-router": "^2.0.7",
-    "@pankod/refine-strapi": "^2.0.7",
+    "@pankod/refine-antd": "^3.1.0",
+    "@pankod/refine-core": "^3.1.0",
+    "@pankod/refine-react-router": "^3.1.0",
+    "@pankod/refine-strapi": "^3.1.0",
     "@pankod/refine-strapi-v4": "^2.7.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
